overflow fix?

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     border-radius: 50%;
+    overflow: hidden;
 }
 
 .content {
